--- a/order-service/order-application/pom.xml
+++ b/order-service/order-application/pom.xml
@@ -3,6 +3,13 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <artifactId>order-application</artifactId>
+  <dependencies>
+    <dependency>
+      <artifactId>order-application-service</artifactId>
+      <groupId>org.necklace</groupId>
+    </dependency>
+  </dependencies>
+
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -10,8 +17,6 @@
     <groupId>org.necklace</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
   <properties>
   </properties>
-
 </project>
