--- a/common/common-domain/pom.xml
+++ b/common/common-domain/pom.xml
@@ -2,21 +2,15 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>order-dataaccess</artifactId>
-  <dependencies>
-    <dependency>
-      <artifactId>order-application-service</artifactId>
-      <groupId>org.necklace</groupId>
-    </dependency>
-  </dependencies>
-
+  <artifactId>common-domain</artifactId>
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>order-service</artifactId>
+    <artifactId>common</artifactId>
     <groupId>org.necklace</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
+
   <properties>
   </properties>
 
