--- a/order-service/order-domain/pom.xml
+++ b/order-service/order-domain/pom.xml
@@ -3,19 +3,24 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <artifactId>order-domain</artifactId>
-  <packaging>pom</packaging>
+  <dependencies>
+    <dependency>
+      <artifactId>common-domain</artifactId>
+      <groupId>org.necklace</groupId>
+    </dependency>
+  </dependencies>
+  <modelVersion>4.0.0</modelVersion>
   <modules>
     <module>order-domain-core</module>
     <module>order-application-service</module>
   </modules>
-  <modelVersion>4.0.0</modelVersion>
 
+  <packaging>pom</packaging>
   <parent>
     <artifactId>order-service</artifactId>
     <groupId>org.necklace</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
   <properties>
   </properties>
 
