--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,6 @@
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <artifactId>threp</artifactId>
-  <modules>
-    <module>order-service</module>
-  </modules>
   <build>
     <plugins>
       <plugin>
@@ -18,12 +15,48 @@
       </plugin>
     </plugins>
   </build>
-  <dependencies></dependencies>
-  <dependencyManagement></dependencyManagement>
-
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <artifactId>order-domain-core</artifactId>
+        <groupId>org.necklace</groupId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <artifactId>order-application-service</artifactId>
+        <groupId>org.necklace</groupId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <artifactId>order-application</artifactId>
+        <groupId>org.necklace</groupId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <artifactId>order-dataaccess</artifactId>
+        <groupId>org.necklace</groupId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <artifactId>order-messaging</artifactId>
+        <groupId>org.necklace</groupId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <artifactId>common-domain</artifactId>
+        <groupId>org.necklace</groupId>
+        <version>${project.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <groupId>org.necklace</groupId>
 
   <modelVersion>4.0.0</modelVersion>
+
+  <modules>
+    <module>order-service</module>
+    <module>common</module>
+  </modules>
   <packaging>pom</packaging>
   <parent>
     <artifactId>spring-boot-starter-parent</artifactId>
