--- a/order-service/order-domain/order-application-service/pom.xml
+++ b/order-service/order-domain/order-application-service/pom.xml
@@ -12,9 +12,15 @@
       <artifactId>common-domain</artifactId>
       <groupId>org.necklace</groupId>
     </dependency>
-    <!--    TODO: add spring-boot-starter-validation & spring-tx -->
+    <dependency>
+      <artifactId>spring-boot-starter-validation</artifactId>
+      <groupId>org.springframework.boot</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>spring-tx</artifactId>
+      <groupId>org.springframework</groupId>
+    </dependency>
   </dependencies>
-
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>order-domain</artifactId>
